--- a/sigavan/app/src/main/res/layout/activity_main.xml
+++ b/sigavan/app/src/main/res/layout/activity_main.xml
@@ -85,8 +85,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/passageiro"
-            android:textSize="17dp"
-            android:onClick=""/>
+            android:textSize="17dp" />
     </RadioGroup>
 
     <Button
