--- a/sigavan_version2/app/src/main/res/values/styles.xml
+++ b/sigavan_version2/app/src/main/res/values/styles.xml
@@ -1,11 +1,17 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- Tema personalizado -->
+    <style name="Theme.AppCompat.FullVan" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:background">#009995</item>
+        <item name="android:textColor">#fff</item>
+    </style>
 </resources>
