--- a/sigavan_version2/app/src/main/res/layout/activity_cadastrar.xml
+++ b/sigavan_version2/app/src/main/res/layout/activity_cadastrar.xml
@@ -63,9 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvTelefone"
         android:layout_marginTop="60dp"
-        android:layout_centerHorizontal="true"
-
-        >
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:layout_width="wrap_content"
@@ -94,16 +92,7 @@
         android:layout_height="wrap_content"
         android:text="@string/confirmar"
         android:layout_below="@id/rgMododeUso"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="80dp"
-        android:layout_marginStart="70dp"/>
+        android:layout_marginTop="60dp"
+        android:layout_centerHorizontal="true"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/cancelar"
-        android:layout_below="@id/rgMododeUso"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="70dp"/>
 </RelativeLayout>
