--- a/sigavan/app/src/main/res/values/styles.xml
+++ b/sigavan/app/src/main/res/values/styles.xml
@@ -27,4 +27,13 @@
         <item name="android:textColor">#fff</item>
     </style>
 
+    <style name="NoActionBar" parent="Theme.AppCompat.FullVan">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
