iniciado completar cadastro

--- a/sigavan/app/src/main/res/layout/activity_completar_cadastro_passageiro.xml
+++ b/sigavan/app/src/main/res/layout/activity_completar_cadastro_passageiro.xml
@@ -1,9 +1,85 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".CompletarCadastroPassageiroActivity">
+    android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/textoPrincipalCadastroPassageiro"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:text="@string/completar_cadastro"
+        android:textAlignment="center"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+
+    <CheckBox
+        android:id="@+id/domingoCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/segundaCheckbox"
+        android:layout_marginEnd="-101dp"
+        android:layout_toStartOf="@+id/quintaCheckbox"
+        android:text="@string/domingo" />
+
+    <CheckBox
+        android:id="@+id/segundaCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="261dp"
+        android:text="@string/segunda" />
+
+    <CheckBox
+        android:id="@+id/tercaCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="29dp"
+        android:text="@string/terca" />
+
+    <CheckBox
+        android:id="@+id/quartaCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/domingoCheckbox"
+        android:layout_alignTop="@+id/quintaCheckbox"
+        android:text="@string/quarta" />
+
+    <CheckBox
+        android:id="@+id/quintaCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/sextaCheckbox"
+        android:layout_marginStart="101dp"
+        android:text="@string/quinta" />
+
+    <CheckBox
+        android:id="@+id/sextaCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/sabadoCheckbox"
+        android:layout_marginEnd="117dp"
+        android:text="@string/sexta" />
+
+    <CheckBox
+        android:id="@+id/sabadoCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/tercaCheckbox"
+        android:layout_marginBottom="181dp"
+        android:text="@string/sabado" />
+
+    <Button
+        android:id="@+id/confirmarbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="44dp"
+        android:text="@string/confirmar" />
+
+</RelativeLayout>
