--- a/sigavan/app/src/main/res/layout/activity_completar_cadastro_passageiro.xml
+++ b/sigavan/app/src/main/res/layout/activity_completar_cadastro_passageiro.xml
@@ -74,7 +74,7 @@
         android:text="@string/sabado" />
 
     <Button
-        android:id="@+id/confirmarbutton"
+        android:id="@+id/confirmarDias"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
