--- a/sigavan/app/src/main/res/values/styles.xml
+++ b/sigavan/app/src/main/res/values/styles.xml
@@ -25,6 +25,7 @@
         <item name="android:windowFullscreen">true</item>
         <item name="android:background">#009995</item>
         <item name="android:textColor">#fff</item>
+        <!-- TODO Layout do Toast background -->
     </style>
 
     <style name="NoActionBar" parent="Theme.AppCompat.FullVan">
