--- a/sigavan/app/src/main/res/layout/activity_motorista.xml
+++ b/sigavan/app/src/main/res/layout/activity_motorista.xml
@@ -3,10 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp" >
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvPassageiros"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/viewholder"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
