--- a/sigavan/app/src/main/res/layout/activity_main.xml
+++ b/sigavan/app/src/main/res/layout/activity_main.xml
@@ -1,60 +1,58 @@
-<RelativeLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/textoPrincipal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
         android:text="@string/sobreVoce"
         android:textAlignment="center"
-        android:layout_marginTop="100dp"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        />
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
 
     <TextView
         android:id="@+id/nomeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/textoPrincipal"
-        android:text="@string/nome"
         android:layout_marginStart="30dp"
         android:layout_marginTop="70dp"
+        android:text="@string/nome"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
 
     <TextView
         android:id="@+id/nomeUsuarioTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:layout_below="@id/textoPrincipal"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="70dp"
         android:layout_toEndOf="@id/nomeTextView"
-        android:layout_marginStart="40dp"
         android:hint="@string/placeholder"
+        android:textAlignment="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
 
     <TextView
         android:id="@+id/tvTelefone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/nomeTextView"
-        android:text="@string/telefone"
         android:layout_alignStart="@id/nomeTextView"
+        android:layout_below="@id/nomeTextView"
         android:layout_marginTop="30dp"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        />
+        android:text="@string/telefone"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
 
     <EditText
         android:id="@+id/telefoneEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_below="@id/nomeTextView"
-        android:layout_toEndOf="@id/tvTelefone"
         android:layout_alignStart="@id/nomeUsuarioTextView"
-        android:hint="@string/dicaTelefone"
+        android:layout_below="@id/nomeTextView"
         android:layout_marginTop="20dp"
+        android:layout_toEndOf="@id/tvTelefone"
+        android:hint="@string/dicaTelefone"
+        android:textAlignment="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
 
     <RadioGroup
@@ -62,62 +60,62 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvTelefone"
-        android:layout_marginTop="60dp"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/modoUso"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
 
         <RadioButton
             android:id="@+id/Motorista"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/motorista"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
         <RadioButton
             android:id="@+id/Passageiro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/passageiro"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
     </RadioGroup>
 
     <Button
         android:id="@+id/confirmarbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/confirmar"
         android:layout_below="@id/modoDeUsoRadioGroup"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
-        android:layout_centerHorizontal="true"/>
+        android:text="@string/confirmar" />
 
 </RelativeLayout>
 
-<!--
+    <!--
 
-    android:id="@+id/intro"
-
-
-
-<TextView
-    android:id="@+id/tvUsername"
+        android:id="@+id/intro"
 
 
 
-
-<EditText
-    android:id="@+id/edtTelefone"
+    <TextView
+        android:id="@+id/tvUsername"
 
 
 
 
-<Button
+    <EditText
+        android:id="@+id/edtTelefone"
 
 
-</RelativeLayout>
--->
+
+
+    <Button
+
+
+    </RelativeLayout>
+    -->
