--- a/sigavan/app/src/main/res/layout/activity_splash_screen.xml
+++ b/sigavan/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,21 +1,21 @@
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="200dp"
-        android:src="@drawable/ic_launcher_foreground"
-        android:contentDescription="@string/icone"/>
+        android:contentDescription="@string/icone"
+        android:src="@drawable/ic_launcher_foreground" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="50sp"
-        android:text="@string/app_name"/>
-    
+        android:text="@string/app_name"
+        android:textSize="50sp" />
+
 </LinearLayout>
