--- a/sigavan/app/src/main/res/layout/activity_main.xml
+++ b/sigavan/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
         android:layout_below="@id/textoPrincipal"
         android:layout_marginStart="40dp"
         android:layout_marginTop="70dp"
+        android:layout_marginEnd="30dp"
         android:layout_toEndOf="@id/nomeTextView"
         android:hint="@string/placeholder"
         android:textAlignment="center"
@@ -50,6 +51,7 @@
         android:layout_alignStart="@id/nomeUsuarioTextView"
         android:layout_below="@id/nomeTextView"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
         android:layout_toEndOf="@id/tvTelefone"
         android:hint="@string/dicaTelefone"
         android:textAlignment="center"
@@ -92,7 +94,8 @@
         android:layout_below="@id/modoDeUsoRadioGroup"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
-        android:text="@string/confirmar" />
+        android:text="@string/confirmar"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
 </RelativeLayout>
 
