Teste de Progress bar

--- a/sigavan/app/src/main/res/values/styles.xml
+++ b/sigavan/app/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
         <item name="android:windowFullscreen">true</item>
         <item name="android:background">#009995</item>
         <item name="android:textColor">#fff</item>
-        <!-- TODO Carlos Layout do Toast background -->
+        <!-- TODO Carlos = Layout do Toast, Alert Dialogue, Progressbar -->
     </style>
 
     <style name="NoActionBar" parent="Theme.AppCompat.FullVan">
