--- a/sigavan/app/src/main/res/layout/activity_main.xml
+++ b/sigavan/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,13 @@
         android:textAlignment="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
 
+    <ProgressBar
+        android:id="@+id/pbloading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:indeterminate="true"/>
+
     <RadioGroup
         android:id="@+id/modoDeUsoRadioGroup"
         android:layout_width="wrap_content"
