--- a/sigavan/app/src/main/res/layout/activity_motorista.xml
+++ b/sigavan/app/src/main/res/layout/activity_motorista.xml
@@ -6,11 +6,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     >
 
+    <Spinner
+        android:id="@+id/selecionarFaculdadeSpinner"
+        android:layout_width="197dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="41dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvPassageiros"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/viewholder"/>
+        android:layout_height="394dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        tools:listitem="@layout/viewholder" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
