--- a/sigavan/app/src/main/res/values/styles.xml
+++ b/sigavan/app/src/main/res/values/styles.xml
@@ -25,7 +25,8 @@
         <item name="android:windowFullscreen">true</item>
         <item name="android:background">#009995</item>
         <item name="android:textColor">#fff</item>
-
+        <item name="android:colorPrimary">#004d4a</item>
+        <item name="android:navigationBarColor">?attr/colorPrimary</item>
         <!-- TODO Carlos = Layout do Toast, Alert Dialogue, Progressbar -->
     </style>
 
