--- a/sigavan/app/src/main/res/layout/activity_motorista.xml
+++ b/sigavan/app/src/main/res/layout/activity_motorista.xml
@@ -7,7 +7,7 @@
     >
 
     <Spinner
-        android:id="@+id/selecionarFaculdadeSpinner"
+        android:id="@+id/faculdadeSpinner"
         android:layout_width="197dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
